[tool.poetry]
name = "starlitecms"
version = "0.1.0"
description = ""
authors = ["egor daniloff <i@dea.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = {extras = ["full"], version = "^0.31.0"}
uvicorn = "^0.23.2"
databases = "^0.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
ipykernel = "^6.25.0"
watchfiles = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
